--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<a href="sileo://source/https://axs6.github.io/pro/" class="follow-button">添加</a>
 				<p class="legend"></span></p>
 				<p class="legend">添加A先生微信加入玩机群 <span class="fa fa-hand-o-down"></span></p>
-				<a href="apt-repo://source/https://axs6.github.io/pro/" class="follow-button">VCR666y</a>
+				<a href="apt-repo://source/https://axs6.github.io/pro/" class="follow-button">VCR66T</a>
                                 <p class="legend"></span></p>
 			        <p class="legend">添加软件源到 Zebra<span class="fa fa-hand-o-down"></span></p>
 				<a href="apt-repo://source/https://axs6.github.io/pro/" class="follow-button">添加</a>
