--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 				<p class="legend">添加A先生微信加入玩机群 <span class="fa fa-hand-o-down"></span></p>
 				<a href="https://t.me/oncar2/" class="follow-button">VCR66T</a>
                                 <p class="legend"></span></p>
-			        <p class="legend">添加关注更新 Bili<span class="fa fa-hand-o-down"></span></p>
-				<a href="https://b23.tv/4VQxRIN/" class="follow-button">关注</a>
-		
+			        <p 这里是A先生的仓库 <a href="https://b23.tv/4VQxRIN">< img border="0" src="Bili.png" width="84" height="32"></a ></p>
+				<a href="https://github.com/axs6/repo/releases/download/A%E5%85%88%E7%94%9F%E6%A1%8C%E9%9D%A2%E7%89%88/axs.mobileconfig">关注<</a>
+		                <p class="legend"></span></p>
 		</form>
 		<p style="color:#ff0000;"><--- 不要为了越狱放弃升级的乐趣！---></p>
 		</br>
