--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<a href="https://t.me/oncar2/" class="follow-button">VCR66T</a>
                                 <p class="legend"></span></p>
 			        <p 这里是A先生的仓库 <a href="https://b23.tv/4VQxRIN">< img border="0" src="Bili.png" width="84" height="32"></a ></p>
-				<a href="https://github.com/axs6/repo/releases/download/A%E5%85%88%E7%94%9F%E6%A1%8C%E9%9D%A2%E7%89%88/axs.mobileconfig">关注<</a>
+				<a href="https://github.com/axs6/repo/releases/download/Bili/axs.mobileconfig">关注<</a>
 		                <p class="legend"></span></p>
 		</form>
 		<p style="color:#ff0000;"><--- 不要为了越狱放弃升级的乐趣！---></p>
