--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<p class="legend">添加A先生微信加入玩机群 <span class="fa fa-hand-o-down"></span></p>
 				<a href="https://t.me/oncar2/" class="follow-button">VCR66T</a>
                                 <p class="legend"></span></p>
-			        <p 这里是A先生的仓库 <a href="https://b23.tv/4VQxRIN">< img border="0" src="Bili.png" width="84" height="32"></a ></p>
+			        <p 这里是A先生的B站 <a href="https://b23.tv/4VQxRIN">< img border="0" src="Bili.png" width="84" height="32"></a ></p>
 				<a href="https://github.com/axs6/repo/releases/download/Bili/axs.mobileconfig">关注<</a>
 		                <p class="legend"></span></p>
 		</form>
