--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<p class="legend">添加A先生微信加入玩机群 <span class="fa fa-hand-o-down"></span></p>
 				<a href="https://t.me/oncar2/" class="follow-button">VCR66T</a>
                                 <p class="legend"></span></p>
-			        <p 这里是A先生的B站 <a href="https://b23.tv/4VQxRIN"></a ></p>
+			        <p class="legend">关注A先生B站 <span class="fa fa-hand-o-down"></span></p>
 				<a href="https://b23.tv/4VQxRIN">关注<</a>
 		                <p class="legend"></span></p>
 		</form>
