--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 				<a href="sileo://source/https://axs6.github.io/pro/" class="follow-button">添加</a>
 				<p class="legend"></span></p>
 				<p class="legend">添加A先生微信加入玩机群 <span class="fa fa-hand-o-down"></span></p>
-				<a href="apt-repo://source/https://axs6.github.io/pro/" class="follow-button">VCR666y</a>
+				<a href="https://t.me/oncar2/" class="follow-button">VCR66T</a>
                                 <p class="legend"></span></p>
-			        <p class="legend">添加软件源到 Zebra<span class="fa fa-hand-o-down"></span></p>
-				<a href="apt-repo://source/https://axs6.github.io/pro/" class="follow-button">添加</a>
-		
+			        <p class="legend">关注A先生B站 <span class="fa fa-hand-o-down"></span></p>
+				<a href="https://b23.tv/4VQxRIN">关注<</a>
+		                <p class="legend"></span></p>
 		</form>
 		<p style="color:#ff0000;"><--- 不要为了越狱放弃升级的乐趣！---></p>
 		</br>
